@@ -8,4 +8,5 @@ license     = Perl_5
 :version = 0.019
 
 [Prereqs / DevelopRequires]
+Test::Warnings = 0
 Test::CleanNamespaces = 0
